--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,25 @@
   --font-weight-bolder: 700;
   --font-weight-boldest: 800;
   --font-optical-sizing: auto;
+  --animate-fade-in: fadeIn 1s ease-in;
+  --animate-fade-out: fadeOut 1s ease-out;
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    100% {
+      opacity: 0;
+    }
+  }
 }
 
 @layer components {
