end of day 4 before lab

--- a/src/styles.css
+++ b/src/styles.css
@@ -46,6 +46,10 @@
     content: ' *';
     @apply text-error;
   }
+
+  .recorder {
+    @apply flex flex-row items-end justify-end  p-2 h-8 fixed top-4 right-0 w-full z-50;
+  }
 }
 
 @plugin "@tailwindcss/forms";
